fix bug: 在js与java部分都增加了验证keyword不能包含特殊字符的功能

--- a/WebRoot/portal/main.html
+++ b/WebRoot/portal/main.html
@@ -385,15 +385,21 @@
 		});
 		$("#keywordHolder").prepend(label)
 	}
-	
 	$("#addKeywordBtn").click(function(){
 		var curWord = $("#newKeywordTxt").val();
-		if(curWord != null && curWord != undefined && curWord.length > 0) {
-			addKeywordInUI(curWord);
-			var totalText = $("#userkeywords").val();
-			$("#userkeywords").val(totalText + curWord + ",");
-			$("#newKeywordTxt").val("");
-			updateUserSetting();
+		if(curWord != null && curWord != undefined && curWord.length > 0 && /^[a-zA-z0-9\u4E00-\u9FA5]*$/.test(curWord)) {
+			if(curWord.length < 2) {
+				alert("关键字的长度不能少于2")
+			} 
+			else {
+				addKeywordInUI(curWord);
+				var totalText = $("#userkeywords").val();
+				$("#userkeywords").val(totalText + curWord + ",");
+				$("#newKeywordTxt").val("");
+				updateUserSetting();				
+			}
+		} else {
+			alert("关键字不能为空且不能包含特殊符号")
 		}
 	});
 	
