--- a/WebRoot/portal/index.html
+++ b/WebRoot/portal/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="icon" href="../../favicon.ico">
+<link rel="icon" href="${base}/portal/images/fav.png">
 
 <title>股事先知 </title>
 
