--- a/WebRoot/portal/login.html
+++ b/WebRoot/portal/login.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>股事先知 - 登录</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="icon" href="${base}/portal/images/fav.png">
 		<link href="${base}/portal/css/bootstrap.min.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
